--- a/index.html
+++ b/index.html
@@ -31,3 +31,40 @@
                                         <span class="line-through">$34.99</span>
                                     </p>
                                 </div>
+                                <div class="quantity-controller">
+                                    <i class="fa-solid fa-minus"></i>
+                                    <p class="quantity">1</p>
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                                <div class="product-removal">
+                                    <button class="remove-product">Remove</button>
+                                </div>
+                                <div class="product-line-price">Product Total:$ 
+                                    <span class="price">25.98</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="product">
+                            <img src="./assets/photo2.png" alt="Levi Shoes">
+                            <div class="product-info">
+                                <div class="product-price">
+                                    <h2>Levi Shoes</h2>
+                                    <p>
+                                        <strong>45.99</strong>
+                                        <span class="line-through">$54.99</span>
+                                    </p>
+                                </div>
+                                <div class="quantity-controller">
+                                    <i class="fa-solid fa-minus"></i>
+                                    <p class="quantity">1</p>
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                                <div class="product-removal">
+                                    <button class="remove-product">Remove</button>
+                                </div>
+                                <div class="product-line-price">Product Total: 
+                                    <span class="price">45.99</span>
+                                </div>
+                            </div>
+                        </div>
