--- a/index.html
+++ b/index.html
@@ -68,3 +68,50 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        <div class="product">
+                            <img src="./assets/photo3.jpg" alt="Antique Clock">
+                            <div class="product-info">
+                                <div class="product-price">
+                                    <h2>Antique Clock</h2>
+                                    <p>
+                                        <strong>74.99</strong>
+                                        <span class="line-through">$94.99</span>
+                                    </p>
+                                </div>
+                                <div class="quantity-controller">
+                                    <i class="fa-solid fa-minus"></i>
+                                    <p class="quantity">1</p>
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                                <div class="product-removal">
+                                    <button class="remove-product">Remove</button>
+                                </div>
+                                <div class="product-line-price">Product Total: 
+                                    <span class="price">74.99</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="buy-detail" id="cart-subtotal">
+                            <p>Subtotal</p>
+                            <p id="subtotalCart">0</p>
+                        </div>
+                        <div class="buy-detail" id="cart-tax">
+                            <p>Tax(%18)</p>
+                            <p id="taxRateCart">0</p>
+                        </div>
+                        <div class="buy-detail" id="cart-shipping">
+                            <p>Shipping</p>
+                            <p id="shippingCart">0</p>
+                        </div>
+                        <div class="buy-detail" id="cart-total">
+                            <p>Total</p>
+                            <p id="totalCart">0</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <script src="app.js"></script>
+    </body>
+</html>
